finished the lesson about angular architecture

--- a/04-angular-basics/my-first-ng-site/src/app/app.component.html
+++ b/04-angular-basics/my-first-ng-site/src/app/app.component.html
@@ -3,3 +3,13 @@
 </h1>
 
 <app-header></app-header>
+<!-- <app-header></app-header>
+<app-header></app-header> -->
+
+<app-user-settings></app-user-settings>
+
+<button appLog mat-raised-button color="primary">
+  This is a nice material design button
+</button>
+
+<app-todo-list></app-todo-list>
